--- a/app/about.html
+++ b/app/about.html
@@ -29,20 +29,23 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="navbar__item navbar__item--current">
+                        <li class="navbar__item">
                             <a href="about.html" class="navbar__link">About</a>
                         </li>
                         <li class="navbar__item">
                             <a href="services.html" class="navbar__link">Services</a>
                         </li>
                         <li class="navbar__item">
-                            <a href="archivo.html" class="navbar__link">Archivo</a>
+                            <a href="portfolio.html" class="navbar__link">Portfolio</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="proyecto.html" class="navbar__link">Proyecto</a>
                         </li>
                         <li class="navbar__item">
                             <a href="contacto.html" class="navbar__link">Contacto</a>
                         </li>
                     </ul>
-                </div><!--/.nav-collapse -->
+                </div>
             </div>
         </nav>
     </header>
