--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -14,12 +15,14 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <title>Index NAG</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-default navbar-fixed-top navbar--transparent">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                        aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -39,28 +42,37 @@
                             <a href="portfolio.html" class="navbar__link">Portfolio</a>
                         </li>
                         <li class="navbar__item">
+                            <a href="proyecto.html" class="navbar__link">Proyecto</a>
+                        </li>
+                        <li class="navbar__item">
                             <a href="contacto.html" class="navbar__link">Contacto</a>
                         </li>
                     </ul>
-                </div><!--/.nav-collapse -->
+                </div>
             </div>
         </nav>
     </header>
 
-    <main class="main-home overlay">
-        <figure class="main-home__figure overlay__back">
+    <main class="main-home overlay overlay-home">
+        <figure class="main-home__figure overlay-home__back">
             <!--<img src="https://placehold.it/1200x600" alt="title" class="cover-img"/>-->
         </figure>
-        <div class="main-home__body overlay__body font-centered">
+        <div class="main-home__body overlay__body overlay-home__body font-centered">
             <figure class="main-home__logo">
                 <img src="images/logo-white.png" alt="title" class="elastic-img">
             </figure>
             <div class="main-home__overlay">
                 <h1 class="main-home__title upper">Nicolas Ayancan Guerrero</h1>
-                <ul class="list-inline">
-                    <li><a href="#" class="fa fa-github"></a></li>
-                    <li><a href="#" class="fa fa-behance"></a></li>
-                    <li><a href="#" class="fa fa-linkedin"></a></li>
+                <ul class="icons-box__list">
+                    <li class="icons-box__item icons-box__item--circled">
+                        <a href="#" class="icons-box__link fa fa-github"></a>
+                    </li>
+                    <li class="icons-box__item icons-box__item--circled">
+                        <a href="#" class="icons-box__link fa fa-behance"></a>
+                    </li>
+                    <li class="icons-box__item icons-box__item--circled">
+                        <a href="#" class="icons-box__link fa fa-linkedin"></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -69,4 +81,5 @@
     <script src="scripts/libs/jquery-1.11.3.js"></script>
     <script src="scripts/libs/bootstrap.min.js"></script>
 </body>
+
 </html>
