--- a/app/contacto.html
+++ b/app/contacto.html
@@ -52,58 +52,53 @@
 
     <main class="main">
         <div class="container">
-            <h1 class="main__title font-centered">Services</h1>
+            <h1 class="main__title font-centered">Contacto</h1>
         </div>
     </main>
 
-    <section class="horizon horizon-halfden no-padding--bottom">
-        <div class="row">
-            <div class="col-lg-6 hidden-xs no-padding--horizontal">
-                <figure class="horizon__figure horizon__figure--full">
-                    <img src="https://placehold.it/1000x600" alt="title" class="cover-img"/>
-                </figure>
-            </div>
-            <div class="col-lg-6 col-xs-12">
-                <div class="horizon__body">
-                    <h3 class="horizon__title horizon__title--medium">Desarrollo Front-End</h3>
+    <section class="horizon">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-xs-12">
+                    <h3 class="horizon__title">Hablemos</h3>
                     <p class="horizon__content">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quibusdam beatae rerum, doloremque vel. Magni reprehenderit ea corrupti ratione culpa quia adipisci repudiandae quod consequatur ullam cum, ut enim! Quia.
+                        Quizás soy un poco tímido, pero siempre estoy abierto a comentarios, consultas o saludos.
                     </p>
                     <p class="horizon__content">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quibusdam beatae rerum, doloremque vel. Magni reprehenderit ea corrupti ratione culpa quia adipisci repudiandae quod consequatur ullam cum, ut enim! Quia.
+                        Ponte en contacto conmigo y trataré de comunicarme contigo lo más pronto posible.
                     </p>
-                    <p class="horizon__content">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quibusdam beatae rerum, doloremque vel. Magni reprehenderit ea corrupti ratione culpa quia adipisci repudiandae quod consequatur ullam cum, ut enim! Quia.
-                    </p>
+                    <ul class="icons-box__list icons-box__list--black font-centered">
+                        <li class="icons-box__item icons-box__item--circled">
+                            <a href="#" class="icons-box__link fa fa-github"></a>
+                        </li>
+                        <li class="icons-box__item icons-box__item--circled">
+                            <a href="#" class="icons-box__link fa fa-behance"></a>
+                        </li>
+                        <li class="icons-box__item icons-box__item--circled">
+                            <a href="#" class="icons-box__link fa fa-linkedin"></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-6 col-xs-12">
+                    <form action="" class="form">
+                        <div class="form__group">
+                            <input type="text" class="form-control form__control" name="name" id="name" placeholder="Nombre" required>
+                        </div>
+                        <div class="form__group">
+                            <input type="email" class="form-control form__control" name="email" id="email" placeholder="E-mail" required>
+                        </div>
+                        <div class="form__group">
+                            <textarea name="message" id="message" class="form-control form__control" placeholder="Mensaje" rows="5"></textarea>
+                        </div>
+                        <div class="form__group">
+                            <button type="submit" class="button form__button">Enviar</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="horizon horizon-halfden no-padding--top">
-        <div class="row">
-            <div class="col-lg-6 col-xs-12">
-                <div class="horizon__body">
-                    <h3 class="horizon__title horizon__title--medium">Desarrollo Back-End</h3>
-                    <p class="horizon__content">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quibusdam beatae rerum, doloremque vel. Magni reprehenderit ea corrupti ratione culpa quia adipisci repudiandae quod consequatur ullam cum, ut enim! Quia.
-                    </p>
-                    <p class="horizon__content">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quibusdam beatae rerum, doloremque vel. Magni reprehenderit ea corrupti ratione culpa quia adipisci repudiandae quod consequatur ullam cum, ut enim! Quia.
-                    </p>
-                    <p class="horizon__content">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quibusdam beatae rerum, doloremque vel. Magni reprehenderit ea corrupti ratione culpa quia adipisci repudiandae quod consequatur ullam cum, ut enim! Quia.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-6 hidden-xs no-padding--horizontal">
-                <figure class="horizon__figure horizon__figure--full">
-                    <img src="https://placehold.it/1000x600" alt="title" class="cover-img"/>
-                </figure>
-            </div>
-        </div>
-    </section>
-    
     <footer class="footer-bar">
         <div class="container">
             <div class="row">
