--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500" rel="stylesheet">
     <title>Index NAG</title>
 </head>
 
@@ -28,7 +29,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Portafolio</a>
+                    <figure class="navbar-brand navbar-brand__figure">
+                        <a href="index.html">
+                            <img src="images/logo-white.png" alt="Logo NAG" class="navbar-brand__logo">
+                        </a>
+                    </figure>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -63,6 +68,7 @@
             </figure>
             <div class="main-home__overlay">
                 <h1 class="main-home__title upper">Nicolas Ayancan Guerrero</h1>
+                <h3 class="main-home__title main-home__title--medium">Desarrollador Web</h3>
                 <ul class="icons-box__list">
                     <li class="icons-box__item icons-box__item--circled">
                         <a href="#" class="icons-box__link fa fa-github"></a>
