--- a/app/about.html
+++ b/app/about.html
@@ -142,28 +142,28 @@
     <footer class="footer-bar">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-3 no-padding--right">
                     <p class="footer-bar__copyright">
                         &copy;Copyright <a href="#" class="common__link">NAG</a> 2017
                     </p>
                 </div>
                 <div class="col-lg-6 font-centered">
-                    <ul class="list-inline footer-bar__rrss">
-                        <li class="footer-bar__rrss__item">
-                            <a href="#" class="footer-bar__rrss__link fa fa-linkedin"></a>
+                    <ul class="icons-box__list">
+                        <li class="icons-box__item icons-box__item--circled">
+                            <a href="#" class="icons-box__link fa fa-github"></a>
                         </li>
-                        <li class="footer-bar__rrss__item">
-                            <a href="#" class="footer-bar__rrss__link fa fa-linkedin"></a>
+                        <li class="icons-box__item icons-box__item--circled">
+                            <a href="#" class="icons-box__link fa fa-behance"></a>
                         </li>
-                        <li class="footer-bar__rrss__item">
-                            <a href="#" class="footer-bar__rrss__link fa fa-linkedin"></a>
+                        <li class="icons-box__item icons-box__item--circled">
+                            <a href="#" class="icons-box__link fa fa-linkedin"></a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-lg-3 font-righted">
-                    <ul class="font-centered__top__holder">
-                        <li class="list-inline footer-bar__top__item">
-                            <a href="#top" class="footer-bar__top__link fa fa-chevron-up"></a>
+                    <ul class="icons-box__list icons-box__list--right">
+                        <li class="icons-box__item icons-box__item--circled">
+                            <a href="#" class="icons-box__link fa fa-angle-up"></a>
                         </li>
                     </ul>
                 </div>
