--- a/app/contacto.html
+++ b/app/contacto.html
@@ -25,7 +25,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Portafolio</a>
+                    <figure class="navbar-brand navbar-brand__figure">
+                        <a href="index.html">
+                            <img src="images/logo-white.png" alt="Logo NAG" class="navbar-brand__logo">
+                        </a>
+                    </figure>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -41,7 +45,7 @@
                         <li class="navbar__item">
                             <a href="proyecto.html" class="navbar__link">Proyecto</a>
                         </li>
-                        <li class="navbar__item">
+                        <li class="navbar__item navbar__item--current">
                             <a href="contacto.html" class="navbar__link">Contacto</a>
                         </li>
                     </ul>
@@ -52,7 +56,7 @@
 
     <main class="main">
         <div class="container">
-            <h1 class="main__title font-centered">Contacto</h1>
+            <h1 class="main__title font-centered"><span class="main__title--line">Contacto</span></h1>
         </div>
     </main>
 
@@ -102,28 +106,28 @@
     <footer class="footer-bar">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-3 no-padding--right">
                     <p class="footer-bar__copyright">
                         &copy;Copyright <a href="#" class="common__link">NAG</a> 2017
                     </p>
                 </div>
                 <div class="col-lg-6 font-centered">
-                    <ul class="list-inline footer-bar__rrss">
-                        <li class="footer-bar__rrss__item">
-                            <a href="#" class="footer-bar__rrss__link fa fa-linkedin"></a>
+                    <ul class="icons-box__list">
+                        <li class="icons-box__item icons-box__item--circled">
+                            <a href="#" class="icons-box__link fa fa-github"></a>
                         </li>
-                        <li class="footer-bar__rrss__item">
-                            <a href="#" class="footer-bar__rrss__link fa fa-linkedin"></a>
+                        <li class="icons-box__item icons-box__item--circled">
+                            <a href="#" class="icons-box__link fa fa-behance"></a>
                         </li>
-                        <li class="footer-bar__rrss__item">
-                            <a href="#" class="footer-bar__rrss__link fa fa-linkedin"></a>
+                        <li class="icons-box__item icons-box__item--circled">
+                            <a href="#" class="icons-box__link fa fa-linkedin"></a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-lg-3 font-righted">
-                    <ul class="font-centered__top__holder">
-                        <li class="list-inline footer-bar__top__item">
-                            <a href="#top" class="footer-bar__top__link fa fa-chevron-up"></a>
+                    <ul class="icons-box__list icons-box__list--right">
+                        <li class="icons-box__item icons-box__item--circled">
+                            <a href="#" class="icons-box__link fa fa-angle-up"></a>
                         </li>
                     </ul>
                 </div>
