--- a/app/proyecto.html
+++ b/app/proyecto.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-    <title>About</title>
+    <title>Contacto</title>
 </head>
 <body>
     <header>
@@ -25,7 +25,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Portafolio</a>
+                    <figure class="navbar-brand navbar-brand__figure">
+                        <a href="index.html">
+                            <img src="images/logo-white.png" alt="Logo NAG" class="navbar-brand__logo">
+                        </a>
+                    </figure>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -38,7 +42,7 @@
                         <li class="navbar__item">
                             <a href="portfolio.html" class="navbar__link">Portfolio</a>
                         </li>
-                        <li class="navbar__item">
+                        <li class="navbar__item navbar__item--current">
                             <a href="proyecto.html" class="navbar__link">Proyecto</a>
                         </li>
                         <li class="navbar__item">
@@ -55,7 +59,7 @@
             <img src="images/project-cajon.jpeg" alt="title" class="cover-img"/>
         </figure>
         <div class="overlay__body overlay-project__body font-centered">
-            <h1 class="main__title font-centered">Nombre del proyecto</h1>
+            <h1 class="main__title font-centered"><span class="main__title--line">Nombre del proyecto</span></h1>
             <div class="icons-box font-centered">
                 <ul class="icons-box__list icons-box__list--medium">
                     <li class="icons-box__item icons-box__item--circled">
